force-app/main/default/objects/Package_Members__c/Package_Members__c.object-meta.xml
<CustomObject>
    <label>Package Member</label>
    <nameField>
        <label>Package Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Package Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>