force-app/main/default/objects/Package_Members__c/fields/Master_Product__c.field-meta.xml
<CustomField>
    <fullName>Master_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Package Members</relationshipLabel>
    <relationshipName>Package_Members</relationshipName>
    <type>Lookup</type>
</CustomField>