force-app/main/default/objects/Package_Members__c/fields/Master_Product_Additional_Product_Info__c.field-meta.xml
<CustomField>
    <fullName>Master_Product_Additional_Product_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Product Additional Product Info</label>
    <referenceTo>kugo2p__AdditionalProductDetail__c</referenceTo>
    <relationshipLabel>Package Members (Master Product Additional Product Info)</relationshipLabel>
    <relationshipName>Package_Members1</relationshipName>
    <type>Lookup</type>
</CustomField>