force-app/main/default/objects/Package_Members__c/fields/Package_Container_Product__c.field-meta.xml
<CustomField>
    <fullName>Package_Container_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Package Container Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Package Members (Package Container Product)</relationshipLabel>
    <relationshipName>Package_Members1</relationshipName>
    <type>Lookup</type>
</CustomField>