force-app/main/default/objects/Package_Members__c/fields/Package_ContainerAdditional_Product_Info__c.field-meta.xml
<CustomField>
    <fullName>Package_ContainerAdditional_Product_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Package ContainerAdditional Product Info</label>
    <referenceTo>kugo2p__AdditionalProductDetail__c</referenceTo>
    <relationshipLabel>Package Members</relationshipLabel>
    <relationshipName>Package_Members</relationshipName>
    <type>Lookup</type>
</CustomField>